# qa_guru_python_5_19_REST_API_1_hw

./: README.md  pyproject.toml
tests/: test_regres.py
